--- a/vs/base/browser/ui/iconLabel/iconlabel.css
+++ b/vs/base/browser/ui/iconLabel/iconlabel.css
@@ -27,12 +27,14 @@
 
 .monaco-icon-label > .label-name {
 	color: inherit;
+	white-space: pre; /* enable to show labels that include multiple whitespaces */
 }
 
 .monaco-icon-label > .label-description {
 	opacity: 0.7;
 	margin-left: 0.5em;
 	font-size: 0.9em;
+	white-space: pre; /* enable to show labels that include multiple whitespaces */
 }
 
 .monaco-icon-label.italic > .label-name,
